configurando banco de dados

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <h2>Menu de Clientes</h2>
    
     <ul>
-        <li><a href="form_insercao.php">Inserir Cliente</a></li>
-        <li><a href="form_consulta.php">Consultar Cliente</a></li>
+        <li><a href="form_insercao.html">Inserir Cliente</a></li>
+        <li><a href="form_consulta.html">Consultar Cliente</a></li>
         <li><a href="listar_clientes.php">Listar Clientes</a></li>
-        <li><a href="form_remocao.php">Remover Cliente</a></li>
+        <li><a href="form_remocao.html">Remover Cliente</a></li>
     </ul>
 </body>
 </html>
