--- a/form_insercao.html
+++ b/form_insercao.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
 <head>
-    <title>Formulário de Inserção de Clientes</title>
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Formulário de Inserção de Clientes</title>
+    </head>
 </head>
 <body>
 
@@ -32,3 +36,4 @@
 
 </body>
 </html>
+
